fixed issue with greyed out buttons hard to read #1121

--- a/assets/global/sass/partials/_extends.scss
+++ b/assets/global/sass/partials/_extends.scss
@@ -118,8 +118,9 @@
 	&[disabled=disabled] {
 		background-color: var(--commonsbooking-color-greyedout);
 		color: var(--commonsbooking-textcolor-light);
+        @extend .shadow-small;
 	}
-	
+
 	&.no-right-radius {
 		border-radius: var(--commonsbooking-radius) 0 ;
 	}	
